fixed gallery style 2 caption spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6921,7 +6921,7 @@ input, select, textarea {
 				height: 100%;
 				background-color: rgba(0, 0, 0, 0.75);
 				opacity: 0;
-				padding: 3rem;
+				padding: 1rem;
 				z-index: 1;
 				font-size: 0.8rem;
 			}
