--- a/styling.css
+++ b/styling.css
@@ -229,11 +229,11 @@ section h1 {
     transform: translate(-50%, -50%);
     z-index: 1000;
     background-color: rgba(0, 0, 0, 0.8);
-    padding: 20px;
+    padding: 15px;
     border-radius: 10px;
     text-align: center;
-    max-width: 90%;
-    max-height: 90%;
+    max-width: 100%;
+    max-height: 100%;
     overflow: auto;
 }
 
